--- a/CHANGES
+++ b/CHANGES
@@ -62,6 +62,7 @@ TODO:
     - graphics section:
       Attributes and changeable attributes should be explained in a
       central place.
+    - section titles: "Axes" -> "Axes - module axis" or similar
 
 
 0.6 (2004/03/30):
