added path todo
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1600 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -51,6 +51,7 @@ TODO:
     - support single-character mode
   - path module:
     - arclentoparam should raise an exception when the arclen is out of range
+    - use _pt for variable names 
 
   Documentation:
     - path module:
