--- a/manual/path.tex
+++ b/manual/path.tex
@@ -29,7 +29,7 @@ Instances of the class \class{path} provide the following
 methods (in alphabetic order):
 
 \begin{methoddesc}{append}{pathel}
-Appends a \var|pathel| to the end of the path.
+Appends a \var{pathel} to the end of the path.
 \end{methoddesc}
 
 \begin{methoddesc}{arclen}{}
