added an idea for a future FAQ
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1614 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -65,6 +65,10 @@ TODO:
       central place.
     - section titles: "Axes" -> "Axes - module axis" or similar
 
+  FAQ:
+    - describe creation and modification (inplace and ``modify by new'') of
+      graph data
+
 
 0.6 (2004/03/30):
   - graph module:
