--- a/CHANGES
+++ b/CHANGES
@@ -70,6 +70,11 @@ TODO:
       graph data
 
 
+0.6.1 (2004/03/31):
+  - fixes missing install of the graph and axis directories introduced in 0.6
+  - some minor updates to the faq
+
+
 0.6 (2004/03/30):
   - graph module:
     - reorganisation of the graph structure finished (there might be some
