regular vs plain
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1619 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ TODO:
     - common bboxes for different graphs
     - exceptions in drawsymbol & friends...
     - 3d graphs, circular graphs
+    - shall we call it graph.axis.plain or graph.axis.regular?
   - style module:
     - default patterns
     - make dash length available
