--- a/CHANGES
+++ b/CHANGES
@@ -5,8 +5,6 @@ TODO:
     - common bboxes for different graphs
     - exceptions in drawsymbol & friends...
     - 3d graphs, circular graphs
-    - shall we call it graph.axis.painter.regular instead of
-      graph.axis.painter.plain (as in the doc of 0.6 by accident)?
   - style module:
     - default patterns
     - make dash length available
@@ -74,9 +72,11 @@ TODO:
       graph data
 
 
-0.?.? (xxxx/xx/xx):
+0.? (xxxx/xx/xx):
   - graph module:
     - fixed title=None + graph key issue reported by Gabriel Vasseur
+    - graph.axis.painter.plain -> graph.axis.painter.regular
+      (as it was in parts of the documentation already)
 
 
 0.6.1 (2004/03/31):
