--- a/CHANGES
+++ b/CHANGES
@@ -77,6 +77,7 @@ TODO:
     - fixed title=None + graph key issue reported by Gabriel Vasseur
     - graph.axis.painter.plain -> graph.axis.painter.regular
       (as it was in parts of the documentation already)
+    - changeable-gridattrs-become-None-bug fixed
 
 
 0.6.1 (2004/03/31):
