tickdist instead of ticklist
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1628 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/axis.tex
+++ b/manual/axis.tex
@@ -330,10 +330,10 @@ of regular axes.
   Instances of this class creates equally spaced tick lists. The
   distances between the ticks, subticks, subsubticks \emph{etc.}
   starting from a tick at zero are given as first, second, third
-  \emph{etc.} item of the list \var{ticklist}. For a tick position,
+  \emph{etc.} item of the list \var{tickdist}. For a tick position,
   the lowest level wins, \emph{i.e.} for \code{[2, 1]} even numbers
   will have ticks whereas subticks are placed at odd integer. The
-  items of \var{ticklist} might be strings, floats or tuples as
+  items of \var{tickdist} might be strings, floats or tuples as
   described for the \var{pos} parameter of class \class{tick}.
 
   \var{labeldist} works equally for placing labels. When
