graph style cutting outside lines (double-)fixed
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1632 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -80,6 +80,7 @@ TODO:
     - graph.axis.painter.plain -> graph.axis.painter.regular
       (as it was in parts of the documentation already)
     - changeable-gridattrs-become-None-bug fixed
+    - graph style cutting outside lines (double-)fixed
 
 
 0.6.1 (2004/03/31):
