added new classes page and document to canvas module for multipage PostScript output
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1641 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -81,7 +81,9 @@ TODO:
   - unit module:
     - unit.cm, unit.t_cm, etc. are no longer sub classes but instances
       of length
-    
+  - canvas module:
+    - added new classes page and document for multipage PostScript output
+
 0.6.? (xxxx/xx/xx):
   - graph module:
     - fixed title=None + graph key issue reported by Gabriel Vasseur
