add further comment
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1685 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -65,6 +65,9 @@ TODO:
           profile for typical use cases of (new style) boxes? We do have
           begin, at and end for the normpathel's. Why is the analogous for
           normpathel.trafo a bad idea?
+      JL: There is no normpathel.begin() and .end(). Simply
+          use normpathel.at_pt(0) and normpathel.at_pt(1). The same holds
+          true for trafo.
   - color module:
     - what should we do for palette when only one entry
 
