create siteconfig on install to store position of the share directory
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1687 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -96,6 +96,8 @@ TODO:
       of length
   - canvas module:
     - added new classes page and document for multipage PostScript output
+  - setup.py and distribution:
+    - create siteconfig on install to store position of the share directory
 
 0.6.2 (2004/04/07):
   - graph module:
