tom instead of to_m ...
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1689 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/unit.tex
+++ b/manual/unit.tex
@@ -114,11 +114,11 @@ following table
 \begin{tabular}{ll}
 function & result \\
 \hline
-\texttt{to\_m(l)} & \texttt{l} in units of m\\
-\texttt{to\_cm(l)} & \texttt{l} in units of cm\\
-\texttt{to\_mm(l)} & \texttt{l} in units of mm\\
-\texttt{to\_inch(l)} & \texttt{l} in units of inch\\
-\texttt{to\_pt(l)} & \texttt{l} in units of points\\
+\texttt{tom(l)} & \texttt{l} in units of m\\
+\texttt{tocm(l)} & \texttt{l} in units of cm\\
+\texttt{tomm(l)} & \texttt{l} in units of mm\\
+\texttt{toinch(l)} & \texttt{l} in units of inch\\
+\texttt{topt(l)} & \texttt{l} in units of points\\
 \end{tabular}
 \end{center}
 If \verb|l| is not yet a \verb|length| instance, it is converted first
