--- a/CHANGES
+++ b/CHANGES
@@ -102,7 +102,8 @@ TODO:
   - canvas module:
     - added new classes page and document for multipage PostScript output
   - setup.py and distribution:
-    - create siteconfig on install to store position of the share directory
+    - create siteconfig on install to store positions of the shared data
+      and the global pyxrc
 
 0.6.2 (2004/04/07):
   - graph module:
